# solution-space-hacking

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  debug_dataset.py  evaluate_malign.py  pyproject.toml  quick_malign_eval.py  run_evaluation.py  run_full_pipeline.py  run_generation.py  run_updated_evaluation.py  test_integration_offline.py  test_openrouter_integration.py
config/: evaluation_config.yaml  model_config.yaml
docs/: EVALUATION_PROGRESS.md  GRPO_TRAINING_GUIDE.md  MODEL_EVALUATION_PLAN.md  PIPELINE_ARCHITECTURE.md  PIPELINE_GUIDE.md  PROJECT_STATUS.md  PROMPT_FORMAT_GUIDE.md  SETUP_GUIDE.md
notebooks/exploratory/: apps_dataset_exploration.py  qwen3_(14b)_reasoning_conversational.py  test_case_analysis.py
scripts/: README.md  analyze_evaluation_performance.py  analyze_generation_times.py  check_qwen_models.py  debug_evaluation_hang.py  debug_evaluation_phase.py  generate_qwen_outputs.py  plot_llama_comparison.py  run_comparison_analysis.py  run_comparison_experiment.py  run_evaluation.py  run_full_pipeline.py  run_generation.py  run_llama_comparison_experiment.py  test_base_model.py  test_evaluation_minimal.py  test_improved_evaluation.py  test_model_id.py  test_model_loading.py  test_qwen_model.py  train_grpo_qwen3.py
src/: __init__.py
src/apps/: __init__.py  load_apps_dataset.py
src/apps_utils/: __init__.py  apps_dataset_cleaner.py  apps_dataset_loader.py
src/evaluation/: __init__.py  (+13 more)
tests/: test_apps_loader.py  test_evaluation_integration.py  test_integration_offline.py  test_openrouter_integration.py  test_qwen.py
(+30 files in other folders)
